[metadata]
name = libmonty
version = attr: libmonty.version.__version__
url = https://codeberg.org/sunarch/libmonty
project_urls =
    Bug Tracker = https://codeberg.org/sunarch/libmonty/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    Topic :: Multimedia :: Sound/Audio :: Players
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = libmonty - a collection of Python tools
long_description = file: README.md
long_description_content_type = text/markdown
keywords = libmonty
platforms = Any

[options]
install_requires = file: requirements.txt
python_requires = >=3.9
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    libmonty = libmonty.__main__:main
    libmonty-copy-stubs = libmonty.filesystem.copy_stubs:main
    libmonty-tree-exec = libmonty.filesystem.tree_exec:main
    libmonty-soundboard = libmonty_soundboard.__main__:main

[options.packages.find]
where = src

[options.package_data]
    libmonty_easypass =
        data/agr-wordlist-en-original.txt
        data/agr-wordlist-en-alt-edited-by-alan-beale.txt
        data/eff-large-wordlist.txt
        data/eff-short-wordlist-1.txt
        data/eff-short-wordlist-2-0.txt
